--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -3,18 +3,30 @@ pt-BR:
     messages:
       too_short: "é muito curto (mínimo %{count} caracteres)"
       invalid: "é inválido"
+      taken: "já está em uso"
+      blank: "não pode ficar em branco"
+      confirmation: "não está de acordo com a confirmação"
     attributes:
       email:
         invalid: "O email informado é inválido."
+        taken: "Já existe uma conta com esse email"
   activerecord:
     errors:
       messages:
         invalid: "é inválido"
         too_short: "é muito curto (mínimo %{count} caracteres)"
+        taken: "já está em uso"
+        blank: "não pode ficar em branco"
+        confirmation: "não está de acordo com a confirmação"
       models:
         user:
           attributes:
             password:
               too_short: "é muito curto (mínimo %{count} caracteres)"
+              blank: "não pode ficar em branco"
             email:
               invalid: "O email informado é inválido."
+              taken: "Já existe uma conta com esse email"
+              blank: "não pode ficar em branco"
+            name:
+              blank: "não pode ficar em branco"
